--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -43,8 +43,8 @@
       <div class=" custom_radio_buttons small-12 columns purpose end" for="For asyLum">
           {{radio-button
           name="selectReason"
-          id="asyLum"
-          value="asyLum"
+          id="abcl"
+          value="abcl"
           selection=selectedId
           required='true'}}
         <label class="radio-button-text align-text">
