--- a/app/templates/request/rbcl_identity_type_details.hbs
+++ b/app/templates/request/rbcl_identity_type_details.hbs
@@ -11,7 +11,7 @@
     </div>
     <div class="columns small-3">
       {{#form-control}}
-        {{numeric-input name="hk_id" id="hk-id-number" value=peopleCount maxlength="4" placeholder="XXXX" required='true'}}
+        {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber maxlength="4" placeholder="XXXX" required='true'}}
       {{/form-control}}
     </div>
     <div class="columns small-6 x-with-brackets">
