--- a/app/templates/search_organisation.hbs
+++ b/app/templates/search_organisation.hbs
@@ -50,7 +50,7 @@
             {{/each}}
           </ul>
 
-          {{#infinity-loader}}
+          {{#infinity-loader infinityModel= filteredResults}}
           {{/infinity-loader}}
 
         {{else if hasNoResults}}
