--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -9,11 +9,11 @@
           <h1 class="title">Client Information</h1>
         </section>
       </nav>
-      {{small-cart-toggle-view}}
+      {{!-- {{small-cart-toggle-view}} --}}
     </section>
   </div>
 
-  {{partial "cart_content/checkout_full_view"}}
+  {{!-- {{partial "cart_content/checkout_full_view"}} --}}
 </div>
 
 <section class="main-section client-information">
