--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -1,3 +1,64 @@
-<div>
-  abc
+<div class="row checkout_pages">
+  <div class="small-12 medium-9 large-9 columns">
+    <section class="main-section new-user-section ui login_page">
+      <nav class="tab-bar">
+        <section class="left-small">
+          {{fa-icon "angle-left"}} {{#link-to "authenticate" classNames="back"}}{{t "back"}}{{/link-to}}
+        </section>
+        <section class="middle tab-bar-section">
+          <h1 class="title">Goods Details</h1>
+        </section>
+      </nav>
+    </section>
+  </div>
 </div>
+<br>
+<section class="main-section client-information">
+	<div class="small-12 medium-9 large-9 columns id-confidential-text">
+  	Please indicate type and quantity of each item needed. <br>
+  	We regularly update the categories available based on the items we normally have in our stock. For unusual requirements not listed here please email local@crossroads.org.hk and we will help if we can.
+  </div>
+</section>
+<br>
+<section class="main-section client-information">
+  {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
+    <div class="row">
+      <div class="small-12 columns">
+        <div class="small-6 columns">
+        	{{#link-to 'order.search_code' model.id}}
+      			{{#form-control}}
+      		    {{auto-resize-textarea data-autoresize=true name="description" value=description pattern=".*\S.*" id="description"}}
+      		  {{/form-control}}
+        	{{/link-to}}
+        </div>
+        <div class="small-6 columns">
+          {{#form-control}}
+            {{numeric-input id='qty' name="qty" value=quantity maxlength="8" required='true' pattern="\d{1,8}"}}
+            <div class='input-error'>Quantity cannot be blank.</div>
+          {{/form-control}}
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">
+        <div class="small-12 columns">
+          {{#form-control}}
+            {{input type="text" id="goods_other_details" name="otherDetails" value=otherDetails classNames="number_input center_align_placeholder"}}
+          {{/form-control}}
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 medium-12 columns">
+        <button {{action 'submit' target=form}} class="button expand expand_button">{{t "account.continue"}}</button>
+      </div>
+    </div>
+  {{/validatable-form}}
+</section>
+{{!-- <div class="small-9 columns description-block">
+    {{#form-control}}
+      <i class="fa fa-times-circle remove-text" aria-hidden="true" {{action "clearDescription"}}></i>
+      {{auto-resize-textarea data-autoresize=true name="description" value=description pattern=".*\S.*" id="description"}}
+    {{/form-control}}
+    </div>
+  </div> --}}
