--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -13,7 +13,7 @@
     </section>
   </div>
 
-  {{partial "cart_content/checkout_full_view"}}
+  {{!-- {{partial "cart_content/checkout_full_view"}} --}}
 </div>
 
 
