--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -1,3 +1,138 @@
-<div>
-abc
+<div class="row checkout_pages">  
+  <div class="small-12 medium-9 large-6 columns">
+    <section class="main-section new-user-section ui login_page">
+      <nav class="tab-bar">
+        <section class="left-small">
+          {{fa-icon "angle-left"}} {{#link-to "authenticate" classNames="back"}}{{t "back"}}{{/link-to}}
+        </section>
+         <section class="middle tab-bar-section">
+          <h1 class="title">Appointment Details</h1>
+        </section>
+      </nav>
+    </section>
+  </div>
 </div>
+
+<section class="main-section client-information">
+  {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
+    <div class="small-12 medium-9 large-9 columns type-of-id-text">
+      Transport
+    </div>
+    <div class="row time_inputs id-type-radio-input" >
+      <div class=" custom_radio_buttons small-12 columns purpose" for="For HKID">
+        {{radio-button
+        name="selectReason"
+        id="self"
+        value="self"
+        selection=selectedId
+        required='true'}}
+        <label class="radio-button-text align-text">
+          Client will bring private vehicle
+        </label>
+      </div>
+
+      <div class=" custom_radio_buttons small-12 columns purpose end" for="For asyLum">
+        {{radio-button
+        name="selectReason"
+        id="ggv"
+        value="ggv"
+        selection=selectedId
+        required='true'}}
+        <label class="radio-button-text align-text">
+          Client needs information about hiring vehicle
+        </label>
+      </div>
+    </div>
+    <br>
+
+    <div class="small-12 medium-9 large-9 columns type-of-id-text">
+      Confirm understanding od labor requirements
+    </div>
+
+    <div class="small-12 medium-9 large-9 columns id-confidential-text">
+      If the request is too large for the client to carry alone, Please advice them to bring their own labor to load at our end and unload at their end. Crossroads does not provide labor, and hired truck drivers do not provide loading services without charge. 
+    </div>
+    <div class="row time_inputs id-type-radio-input" >
+      <div class='checkbox custom_radio_buttons small-12 columns purpose'>
+        {{input type="checkbox" name="labor" checked=true id='4' }}
+        <label class="radio-button-text  align-text" for='4'>
+        <span> I confirm understanding of labor requirements </span>
+        </label>
+      </div>
+    </div>
+    <br>
+
+    <div class="row">
+      <div class="small-12 medium-9 large-9 columns type-of-id-text">
+        Appointment Date
+      </div>
+    </div>
+
+    <div class="row time_inputs id-type-radio-input">
+        <div class="checkbox custom_radio_buttons small-12 columns date_selector">
+          {{select-date
+            name='selectedDate'
+            id='selectedDate'
+            value=''
+            available=available_dates
+            selection=selectedDate
+            placeholder=datePrompt
+            pattern="[a-zA-Z]{3}\s?[a-zA-Z]{3}\s?[0-9]{1,2}"}}
+          <i class="fa fa-calendar calender_icon"></i>
+        </div>
+    </div>
+
+    <br>
+
+    {{!-- {{#if selectedDate}} --}}
+      <div class="small-12 medium-9 large-9 columns type-of-id-text">
+        Appointment Time
+      </div>
+      <div class="row time_inputs id-type-radio-input" >
+          <div class="columns smasll-12">
+            <div class="custom_radio_buttons small-4 columns purpose" for="For HKID">
+              {{radio-button
+              name="selectTime"
+              id="11:00am"
+              value="11:00am"
+              selection=selectedTimeId
+              required='true'}}
+              <label class="radio-button-text align-text">
+                11:00am
+              </label>
+            </div>
+
+            <div class="custom_radio_buttons small-4 columns purpose end" for="For asyLum">
+              {{radio-button
+              name="selectTime"
+              id="2:00pm"
+              value="2:00pm"
+              selection=selectedTimeId
+              required='true'}}
+              <label class="radio-button-text align-text">
+                2:00pm
+              </label>
+            </div>
+
+            <div class="custom_radio_buttons small-4 columns purpose end" for="For asyLum">
+              {{radio-button
+              name="selectTime"
+              id="3:30pm"
+              value="3:30pm"
+              selection=selectedTimeId
+              required='true'}}
+              <label class="radio-button-text align-text">
+                3:30pm
+              </label>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="small-12 columns">
+              <a {{action 'submit' target=form}} class="button expand">Continue</a>
+            </div>
+          </div>
+      </div>
+    {{!-- {{/if}} --}}
+  {{/validatable-form}}
+</section>
