--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -22,32 +22,17 @@
 <br>
 <section class="main-section client-information">
   {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
-    <div class="row">
-      <div class="small-12 columns">
-        <div class="small-6 columns">
-        	{{#link-to 'order.search_code' model.id}}
-      			{{#form-control}}
-      		    {{auto-resize-textarea data-autoresize=true name="description" value=description pattern=".*\S.*" id="description"}}
-      		  {{/form-control}}
-        	{{/link-to}}
-        </div>
-        <div class="small-6 columns">
-          {{#form-control}}
-            {{numeric-input id='qty' name="qty" value=quantity maxlength="8" required='true' pattern="\d{1,8}"}}
-            <div class='input-error'>Quantity cannot be blank.</div>
-          {{/form-control}}
-        </div>
+    {{#each requests as |req index|}}
+      {{add-request id=index order=model request=req num=index}}
+    {{/each}}
+     <div class='row'>
+      <div class='small-2 columns icon-center'>
+        <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
       </div>
+      <div class='small-9 columns link-blue add_package_link' {{action "addRequest" on="click"}}> Request more goods </div>
+      <div class='small-1 columns'>&nbsp;</div>
     </div>
-    <div class="row">
-      <div class="small-12 columns">
-        <div class="small-12 columns">
-          {{#form-control}}
-            {{input type="text" id="goods_other_details" name="otherDetails" value=otherDetails classNames="number_input center_align_placeholder"}}
-          {{/form-control}}
-        </div>
-      </div>
-    </div>
+    <br>
     <div class="row">
       <div class="small-12 medium-12 columns">
         <button {{action 'submit' target=form}} class="button expand expand_button">{{t "account.continue"}}</button>
