--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,6 @@
+@import "mixins/alignment";
 @import "settings";
+@import "colors";
 @import "fonts";
 @import "bower_components/foundation/scss/foundation";
 @import "bower_components/font-awesome/css/font-awesome";
@@ -20,6 +22,7 @@
 @import "search";
 @import "account_details";
 @import "request_purpose";
+@import "order_block";
 
 @import "templates/home";
 @import "templates/loading";
