--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -22,14 +22,14 @@
 <br>
 <section class="main-section client-information">
   {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
-    {{#each requests as |req index|}}
+    {{#each sortedGcRequests as |req index|}}
       {{add-request id=index order=model request=req num=index}}
     {{/each}}
      <div class='row'>
       <div class='small-2 columns icon-center'>
         <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
       </div>
-      <div class='small-9 columns link-blue add_package_link' {{action "addRequest" on="click"}}> Request more goods </div>
+      <div class='small-9 columns link-blue add_package_link' {{action "removeRequest" on="click"}}> Request more goods </div>
       <div class='small-1 columns'>&nbsp;</div>
     </div>
     <br>
