GCW-2187 MyOrder details tabs

--- a/app/styles/_order_block.scss
+++ b/app/styles/_order_block.scss
@@ -82,6 +82,9 @@
         &.closed {
           background-color: $closed-state-color;
         }
+        &.draft {
+          background-color: $draft-state-color;
+        }
       }
     }
 
