--- a/app/styles/_custom_button.scss
+++ b/app/styles/_custom_button.scss
@@ -1,4 +1,5 @@
 .button, button{
+  user-select: none; 
   &.info{
     font-size: 0.75rem;
     font-weight: 100;
@@ -10,6 +11,11 @@
         border-color: transparent;
       }
     }
+  }
+
+  &.light {
+    background-color: transparent;
+    border: 1px solid white;
   }
 
   &.action:not(.disabled) {
