--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -1,4 +1,5 @@
 .my_orders {
+
   .title {
     font-weight: bold;
     font-size: 1rem;
@@ -7,12 +8,156 @@
     margin: 1rem;
   }
 
-  .list-items {
-    li {
-      padding-right: 0;
+  .content {
+    margin: 0 auto;
+
+    // ---- ACTION BUTTONS ('Browse goods', 'Book appointment')
+    .button-container {
+      text-align: center;
+      .button {
+        font-size: 0.9em;
+        margin-top: 1.25rem;
+        margin-bottom: 1.25rem;
+        .fa {
+          margin-right: 0.35rem;
+        }
+      }
+    }
+
+    // ---- LIST OF ORDERS
+    .list-items {
+      li {
+        padding-right: 0;
+      }
+    }
+
+    // ---- ORDER DETAILS (WHEN SELECTED)
+    .order-summary {
+      @each $state, $color in (
+        submitted: $submitted-state-color,
+        processing: $processing-state-color,
+        awaiting_dispatch: $scheduled-state-color,
+        scheduled: $scheduled-state-color,
+        dispatching: $dispatching-state-color,
+        cancelled: $cancelled-state-color,
+        closed: $closed-state-color,
+        draft: $draft-state-color
+      ) {
+        &.#{$state} {
+          .header, .booking-tab .state-container {
+            background-color: $color;
+          }
+        }
+      }
+
+      // ---- TOP COLORED HEADER
+      .header {
+        border-bottom: none;
+        text-align: center;
+        .strong {
+          font-family: $header-font-family;
+        }
+        .header-icon {
+          padding-top: 0.2rem;
+          padding-left: 0;
+          .icon {
+            line-height: 1.5rem;
+          }
+          .sub-text {
+            font-size: 0.6rem;
+            line-height: 0.6rem;
+          }
+        }
+      }
+
+      // ---- TABS (BOOKING/GOODS/...)
+      .tabs .tab {
+        text-align: center;
+        opacity: 0.5;
+        &.selected {
+          opacity: 1;
+        }
+        .fa {
+          margin-right: 0.5rem;
+        }
+      }
+
+      // ---- TAB DATA
+      .tab-content {
+
+        // ---- SECTIONS (Separated by lines)
+        section {
+          &:not(:last-child) {
+            border-bottom: 1px solid white;
+          }
+          padding-bottom: 1rem;
+          padding-top: 1rem;
+
+          .section-title {
+            color:white;
+            font-family: $header-font-family;
+            padding-left: 6%;
+          }
+
+          // ---- PAIRS OF LABELS AND TEXT
+          &.details {
+            .detail-row {
+              display: flex;
+              flex-wrap: wrap;
+              margin-top: 0.75rem;
+              margin-bottom: 0.75rem;
+              padding-left: 6%;
+              .data-type {
+                margin-right: 1rem;
+                width: 30%;
+              }
+              .data {
+                color: white;
+              }
+            }
+          }
+        }
+
+
+        // ---- TAB SPECIFIC STYLES
+
+        // ---- BOOKING TAB
+        .booking-tab {
+          
+          .state-description {
+            padding: 0 10%;
+            margin: 1.5rem 0;
+            color: white;
+            .state-container {
+              padding: 1rem;
+              .state-title {
+                .fa {
+                  margin-right: 0.5rem;
+                }
+                margin-bottom: 1rem;
+                font-family: $header-font-family;
+                text-transform: capitalize;
+              }
+              .state-text {
+                font-style: italic;
+              }
+            }
+          }
+
+          section.purpose {
+            ul {
+              margin-bottom: 0;
+            }
+          }
+        }
+
+
+
+      }
     }
   }
 }
+
 .empty-cart-message{
   padding-left: 7px !important;
   font-size:1rem !important;
