--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -8,3 +8,4 @@ $scheduled-state-color: #7DA857;
 $dispatching-state-color: #051D3F;
 $cancelled-state-color: #000000;
 $closed-state-color: #000000;
+$draft-state-color: #000000;
