--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -1,31 +1,34 @@
 <div class="row my_orders">
-  <div class="title">{{t "my_orders.my_orders"}}</div>
-  <div class="row order-heading">
-    <div class="small-6 columns">{{t "my_orders.order_no"}}</div>
-    <div class="small-6 columns">{{t "my_orders.order_state"}}</div>
-  </div>
-  <div class="small-12 columns">
-    <ul class="list list-items">
-      {{#each arrangedOrders as |order|}}
-        <li {{action "setOrder" order}}>
-          {{ partial 'order/order_block'}}
-        </li>
-        {{!-- <li {{action "setOrder" order}}>
-          <div class="row">
-            <div class="small-6 columns">
-              {{order.code}}
-            </div>
-            <div class="small-6 columns">
-              {{t order.updatedState}}
+  <div class="title show-for-medium-up">{{t "my_orders.my_orders"}}</div>
+    <div class="small-12 columns content">
+      {{#if selectedOrder}}
+        <div class="order-summary {{selectedOrder.state}}">
+          {{partial "order/summary"}}
+        </div>
+      {{else}}
+        <div class="row">
+          <div class="columns button-container small-6">
+            {{#link-to "browse"}}
+              <div class="button light">
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                {{t 'home.order_goods.action'}}
+              </div>
+            {{/link-to}}
+          </div>
+          <div class="columns button-container small-6">
+            <div class="button light">
+              <i class="fa fa-calendar" aria-hidden="true"></i>
+              {{t 'home.visit.action'}}
             </div>
           </div>
-        </li> --}}
-      {{/each}}
-    </ul>
-  </div>
-  {{!-- {{#if selectedOrder}}
-    <div class="order-summery">
-      {{partial "order/summery"}}
+        </div>
+        <ul class="list list-items">
+          {{#each arrangedOrders as |order|}}
+            <li {{action "setOrder" order}}>
+              {{ partial 'order/order_block'}}
+            </li>
+          {{/each}}
+        </ul>
+      {{/if}}
     </div>
-  {{/if}} --}}
 </div>
