GCW-2196 Clicking on cart item should redirect to item detail page

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -66,6 +66,14 @@
   }
 }
 
+.cart-redirect-link {
+  background-color: transparent !important;
+  cursor: pointer;
+  &.disabled {
+    cursor: default;
+  }
+}
+
 .cart-icon {
   font-size: 1.3rem;
   vertical-align: text-top;
