add dashboard link

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -12,7 +12,7 @@
 
     <div class="row button_container">
       <!-- Browse button -->
-      <div class="columns home_section medium-6">
+      <div class="columns home_section large-6">
         <div class="section_title"> {{ t "home.order_goods.title" }} </div>
         <div class="section_subtitle small"> <i class="fa fa-check"></i> {{ t "home.order_goods.subtitle" }} </div>
         {{#link-to "browse"}}
@@ -23,7 +23,7 @@
       </div>
 
       <!-- Visit button -->
-      <div class="columns home_section medium-6">
+      <div class="columns home_section large-6">
         <div class="section_title"> {{ t "home.visit.title" }} </div>
         <div class="section_subtitle small">
           <div><i class="fa fa-check"></i> {{ t "home.visit.subtitle" }} </div>
@@ -49,7 +49,7 @@
 
       <div class="row">
         <!-- How to browse -->
-        <div class="columns medium-6">
+        <div class="columns large-6">
           <div class="section_text small">
             <div> {{ t "home.order_goods.title" }} </div>
             <div class="step"> 1) {{ t "home.order_goods.step_1.desc" }} </div>
@@ -84,7 +84,7 @@
         </div>
 
         <!-- How to visit -->
-        <div class="columns medium-6">
+        <div class="columns large-6">
           <div class="section_text small">
             <div> {{ t "home.visit.title" }} </div>
             <div class="step light"> {{ t "home.visit.guide_intro" }} </div>
