--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -1,5 +1,5 @@
 <div class="row checkout_pages">  
-  <div class="small-12 medium-9 large-6 columns">
+  <div class="small-12 columns">
     <section class="main-section new-user-section ui login_page">
       <nav class="tab-bar">
         <section class="left-small">
@@ -15,7 +15,7 @@
 
 <section class="main-section client-information">
   {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
-    <div class="small-12 medium-9 large-9 columns type-of-id-text">
+    <div class="small-12 columns type-of-id-text">
       Transport
     </div>
     <div class="row time_inputs id-type-radio-input" >
@@ -45,11 +45,11 @@
     </div>
     <br>
 
-    <div class="small-12 medium-9 large-9 columns type-of-id-text">
+    <div class="small-12 columns type-of-id-text">
       Confirm understanding od labor requirements
     </div>
 
-    <div class="small-12 medium-9 large-9 columns id-confidential-text">
+    <div class="small-12 columns id-confidential-text">
       If the request is too large for the client to carry alone, Please advice them to bring their own labor to load at our end and unload at their end. Crossroads does not provide labor, and hired truck drivers do not provide loading services without charge. 
     </div>
     <div class="row time_inputs id-type-radio-input" >
@@ -63,7 +63,7 @@
     <br>
 
     <div class="row">
-      <div class="small-12 medium-9 large-9 columns type-of-id-text">
+      <div class="small-12 columns type-of-id-text">
         Appointment Date
       </div>
     </div>
@@ -85,11 +85,11 @@
     <br>
 
     {{!-- {{#if selectedDate}} --}}
-      <div class="small-12 medium-9 large-9 columns type-of-id-text">
+      <div class="small-12 columns type-of-id-text">
         Appointment Time
       </div>
       <div class="row time_inputs id-type-radio-input" >
-          <div class="columns smasll-12">
+          <div class="columns small-12">
             <div class="custom_radio_buttons small-4 columns purpose" for="For HKID">
               {{radio-button
               name="selectTime"
@@ -102,7 +102,7 @@
               </label>
             </div>
 
-            <div class="custom_radio_buttons small-4 columns purpose end" for="For asyLum">
+            <div class="custom_radio_buttons small-4 columns purpose" for="For asyLum">
               {{radio-button
               name="selectTime"
               id="2:00pm"
@@ -126,12 +126,13 @@
               </label>
             </div>
           </div>
-
-          <div class="row">
-            <div class="small-12 columns">
-              <a {{action 'submit' target=form}} class="button expand">Continue</a>
-            </div>
-          </div>
+          <br>
+      </div>
+      <br>
+      <div class="row">
+        <div class="small-12 columns">
+          <a {{action 'submit' target=form}} class="button expand"> Continue </a>
+        </div>
       </div>
     {{!-- {{/if}} --}}
   {{/validatable-form}}
