--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -1,5 +1,5 @@
 <div class="row checkout_pages">  
-  <div class="small-12 medium-9 large-6 columns">
+  <div class="small-12 columns">
     <section class="main-section new-user-section ui login_page">
       <nav class="tab-bar">
         <section class="left-small">
@@ -14,11 +14,11 @@
 </div>
 
 <section class="main-section client-information">
-	<div class="small-12 medium-9 large-9 columns type-of-id-text">
-	  Submit your offer
+	<div class="small-12 columns type-of-id-text">
+	  Submit your Order
 	</div>
 	<br>
-
+  <br>
 	<div class="row">
 		<div class="small-12 columns">
 		  <button id="submit_pin" class="button expand drop_off" {{action 'confirmBooking' order}}>
