--- a/app/templates/request/hk_identity_type_details.hbs
+++ b/app/templates/request/hk_identity_type_details.hbs
@@ -1,23 +1,23 @@
-<div class="small-12 medium-9 large-9 columns type-of-id-text">
+<div class="small-12 columns type-of-id-text">
   Input the last 4 digits of the client's HKID
 </div>
-<div class="small-12 medium-9 large-9 columns id-confidential-text">
+<div class="small-12 columns id-confidential-text">
   You do not need to include number in brackets
 </div>
 <div class="row hk-id">
   <div class="small-12 columns">
-    <div class="small-3 medium-9 large-9 columns p12">
+    <div class="small-3 medium-3 large-3 columns p12">
       <label> P12 </label>
     </div>
-    <div class="columns small-3">
+    <div class="columns small-3 medium-3 large-3">
       {{#form-control}}
         {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber maxlength="4" placeholder="XXXX" required='true'}}
       {{/form-control}}
     </div>
-    <div class="columns small-6 x-with-brackets">
+    <div class="columns small-6 medium-6 large-6 x-with-brackets">
       (X)
     </div>
-    <div class='small-12 columns input-error type-of-id-text'>Please input number only</div>
+    <div class='small-12 medium-12 large-12 columns input-error type-of-id-text'>Please input number only</div>
   </div>
 </div>
 <br>
