--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -3,7 +3,14 @@
     <section class="main-section new-user-section ui login_page">
       <nav class="tab-bar">
         <section class="left-small">
-          {{fa-icon "angle-left"}} {{#link-to "authenticate" classNames="back"}}{{t "back"}}{{/link-to}}
+          {{fa-icon "angle-left"}} 
+          {{#if fromClientInformation}}
+            {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
+          {{else if (is-equal backLinkPath 'order.client_information')}}
+            {{#link-to backLinkPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
+          {{else}}
+            {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
+          {{/if}}
         </section>
         <section class="middle tab-bar-section">
           <h1 class="title">Goods Details</h1>
