use existing beneficiary record if alaredy exists against order

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,5 +29,7 @@
 @import "templates/item";
 @import "templates/login";
 @import "templates/client_information";
+@import "templates/appointment_details";
 @import "components/logo-banner";
+@import "components/add-request";
 @import "ember_offline";
