--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -11,7 +11,6 @@
     .custom_radio_buttons {
       border: 1px solid;
       padding: .4rem;
-      width: 96.5%!important;
       margin-top: 1rem;
       height: 2.7rem;
       // border: 1px solid white !important;
@@ -38,23 +37,26 @@
   }
 }
 div .hk-id{
-  #hk-id-number, input{
+  #hk-id-number, #hk-id-firstName, #hk-id-lastName input{
     height: 2.7rem;
     padding: 0 0.5rem;
     width: 97%;
-    background: #002352;
+    background: #002352t;
     border: 1px solid $tabbar-menu-icon-color;
     color: white;
     height: 2.7rem !important;
     margin-bottom: 0;
   }
+
   .input-error {
-    background: #ED4C4E ;
+    background: #ED4C4E;
     color: white;
     padding: 0.2rem;
+    margin-right: 0.5rem;
+    margin-top: 0rem;
     display: none;
     padding-bottom: 0.25rem !important;
-    width: 98.7%;
+    width: 98.5%;
   }
 
   label{
@@ -91,14 +93,25 @@ div .hk-id{
     height: 2.7rem !important;
     margin-bottom: 0;
   }
+
+  input{
+    margin-top: 0.3rem;
+  }
+
+  label{
+    @media #{$small-only} {
+      font-size: 0.8rem;
+    }
+  }
 }
 
 .input-error {
+  margin-left: 0.3rem;
   background: #ED4C4E ;
   color: white;
-  padding: 0.2rem;
   display: none;
+  padding: 0.2rem;
   padding-bottom: 0.25rem !important;
-  width: 98.7%;
+  width: 96.5%;
 }
 
