--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -60,22 +60,35 @@
       {{#form-control}}
         <div class="small-2 columns client_title">
           <label class="form-label">{{t "account.title"}}</label>
-          {{select-list
-            content=titles
-            on-change=(action (mut selectedTitle))
-            selectedValue=selectedTitle
-            value= selectedTitle
-            selectArrow=true
-            classNames='condition'
-            idNames='title' }}
         </div>
         <div class="small-5 columns client_first_name">
-          <label class="form-label">{{t "account.first"}}</label>
-          {{input type="text" value=firstName id="firstName" classNames="number_input center_align_placeholder" required='true'}}
+          <label class="form-label"> Client's First Name </label>
         </div>
         <div class="small-5 columns client_last_name">
-          <label class="form-label">{{t "account.last"}}</label>
-          {{input type="text" value=lastName id="lastName" classNames="number_input center_align_placeholder" required='true'}}
+          <label class="form-label"> Client's Family Name </label>
+        </div>
+        <br>
+        <div class="small-12 columns id-confidential-text">
+          As shown on identity document <br> <br>
+        </div>
+        <div class="hk-id">
+          <div class="small-2 columns client_title">
+            {{select-list
+              content=titles
+              on-change=(action (mut selectedTitle))
+              selectedValue=selectedTitle
+              value= selectedTitle
+              selectArrow=true
+              classNames='condition'
+              idNames='title' }}
+          </div>
+
+          <div class="small-5 columns client_first_name">
+            {{input type="text" value=firstName id="hk-id-firstName" classNames=" center_align_placeholder" required='true'}}
+          </div>
+          <div class="small-5 columns client_last_name">
+            {{input type="text" value=lastName id="hk-id-lastName" classNames="center_align_placeholder" required='true'}}
+          </div>
         </div>
         <div class="small-12 columns input-error warning_empty">
           {{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.user_info"}}
@@ -84,19 +97,19 @@
     </div>
 
     <div class="row client-name-inputs">
-      <div class="small-12 medium-9 large-9 columns type-of-id-text">
-        Clients contact phone number
+      <div class="small-12 columns type-of-id-text">
+        Clients contact phone number <br>
       </div>
-      <div class="small-12 medium-9 large-9 columns id-confidential-text">
-        We will use this number to confirm schedule and details.
+      <div class="small-12 columns id-confidential-text">
+        We will use this number to confirm schedule and details. <br><br>
       </div>
-      <div class="row">
+      <div class="row hk-id">
         {{#form-control}}
           <div class="row client-name-inputs">
-            <div class="small-3 large-1 columns">
+            <div class="small-3 columns">
               <span class="prefix">+852</span>
             </div>
-            <div class="small-9 large-11 columns">
+            <div class="small-9 columns">
               {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
             </div>
           </div>
