--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -35,7 +35,7 @@
   }
 }
 div .hk-id{
-  #hk-id-number, #hk-id-firstName, #hk-id-lastName input{
+  #hk-id-number, #hk-id-firstName, #hk-id-lastName {
     height: 2.7rem;
     padding: 0 0.5rem;
     width: 97%;
