--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -2,7 +2,7 @@
   <div class="small-12 columns">
     <section class="main-section new-user-section ui login_page">
       <nav class="tab-bar">
-        <section class="left-small">
+        <section class="left-large">
           {{fa-icon "angle-left"}} {{#link-to "request_purpose" classNames="back"}}{{t "back"}}{{/link-to}}
         </section>
          <section class="middle tab-bar-section">
