--- a/app/templates/order/summary_tabs/goods.hbs
+++ b/app/templates/order/summary_tabs/goods.hbs
@@ -8,7 +8,7 @@
       </div>
 
       {{#each requestedGoods as |good|}}
-        <div class="detail-row">
+        <div class="detail-row row">
           <div class="data-type">{{ good.category }}</div>
           <div class="data">{{ good.text }}</div>
         </div>
