--- a/app/templates/order/summary.hbs
+++ b/app/templates/order/summary.hbs
@@ -14,7 +14,7 @@
 </div>
 <div class="row tabs tab-bar">
   {{#each orderSummaryTabs as |tab|}}
-    <div class="tab columns small-{{math 12 '/' orderSummaryTabs.length}} {{if (is-equal tab.name selectedOrderTab.name) 'selected' 'dimmed' }}" {{action "selectTab" tab}}>
+    <div class="{{ tab.name }} tab columns small-{{math 12 '/' orderSummaryTabs.length}} {{if (is-equal tab.name selectedOrderTab.name) 'selected' 'dimmed' }}" {{action "selectTab" tab}}>
       <i class="fa fa-{{ tab.icon }}" aria-hidden="true"></i>
       {{ t (concat 'my_orders.details.tabs.' tab.name) }}
     </div>
