--- a/app/templates/request/hk_identity_type_details.hbs
+++ b/app/templates/request/hk_identity_type_details.hbs
@@ -6,18 +6,20 @@
 </div>
 <div class="row hk-id">
   <div class="small-12 columns">
-    <div class="small-3 medium-3 large-2 columns p12">
-      <label> P12 </label>
-    </div>
-    <div class="columns small-3 medium-3 large-2">
-      {{#form-control}}
-        {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber maxlength="4" placeholder="XXXX" required='true'}}
-      {{/form-control}}
-    </div>
-    <div class="columns small-6 medium-6 large-8 x-with-brackets">
-      (X)
-    </div>
-    <div class='small-12 medium-12 large-12 columns input-error type-of-id-text'>Please input number only</div>
+    {{#form-control}}
+      <div class="small-3 medium-3 large-2 columns p12">
+        <label> P12 </label>
+      </div>
+      <div class="columns small-3 medium-3 large-2">
+          {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber maxlength="4" placeholder="XXXX" required='true'}}
+      </div>
+      <div class="columns small-6 medium-6 large-8 x-with-brackets">
+        (X)
+      </div>
+      <div class="small-12 columns input-error warning_empty">
+        <div class='input-error'>Please input numbers only.</div>  
+      </div>
+    {{/form-control}}
   </div>
 </div>
 <br>
