enable book appointment button

--- a/app/templates/_book_appointment_button.hbs
+++ b/app/templates/_book_appointment_button.hbs
@@ -6,7 +6,7 @@
   {{/link-to}}
 {{else}}
   {{#link-to "login" (query-params bookAppointment=true)}}
-    <div class="button small action disabled">
+    <div class="button small action">
       {{ t "home.visit.action" }} <i class="fa fa-calendar"></i>
     </div>
   {{/link-to}}
